# sd2405al

./: Cargo.toml  README.md  run-example.sh
examples/: simple.rs
src/: datetime.rs  interface.rs  lib.rs
tests/: integration.rs
